--- a/dev/about.html
+++ b/dev/about.html
@@ -221,11 +221,11 @@
                 Saturday: 9:00 AM - 1:00 PM
               </div>
               <div class="address">41 Mount Kellett Road, The Peak</div>
-              <div class="email">
+              <!-- <div class="email">
                 <a href="mailto:info@matilda.org">info@matilda.org</a>
                         </div>
                         <div class="phone">+852 2849 0111</div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
