--- a/dev/testimonials.html
+++ b/dev/testimonials.html
@@ -338,12 +338,12 @@
               <div class="address">
                 3/F, Prosperity Tower, 39 Queen's Road Central, Hong Kong
               </div>
-              <div class="email">
+              <!-- <div class="email">
                 <a href="mailto:mmc.central@matilda.org"
                   >mmc.central@matilda.org</a
                 >
               </div>
-              <div class="phone">+852 2537 8500</div>
+              <div class="phone">+852 2537 8500</div> -->
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
               <h5 class="footer-title">Matilda International Hospital</h5>
@@ -353,11 +353,11 @@
                 Saturday: 9:00 AM - 1:00 PM
               </div>
               <div class="address">41 Mount Kellett Road, The Peak</div>
-              <div class="email">
+              <!-- <div class="email">
                 <a href="mailto:info@matilda.org">info@matilda.org</a>
                         </div>
                         <div class="phone">+852 2849 0111</div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
