--- a/dev/info.html
+++ b/dev/info.html
@@ -129,41 +129,41 @@
                         </div>
                         <div class="email">
                             <a href="mailto:nextstepmedic@gmail.com">nextstepmedic@gmail.com</a
-                  >
-                </div>
-                <div class="phone">+852 3703-5860 / +852 65950118</div>
-                <div class="whatsapp">+852 65950118</div>
+                >
               </div>
-              <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-                <h5 class="footer-title">Matilda Medical Centre (Central)</h5>
-                <div>
-                  Tuesday: 12:00 PM - 17:00 PM <br />
-                  Thursday: 12:00 PM - 17:00 PM<br />
-                  Saturday: 9:00 AM - 1:00 PM
-                </div>
-                <div class="address">
-                  3/F, Prosperity Tower, 39 Queen's Road Central, Hong Kong
-                </div>
-                <div class="email">
-                  <a href="mailto:mmc.central@matilda.org"
-                    >mmc.central@matilda.org</a
-                  >
-                </div>
-                <div class="phone">+852 2537 8500</div>
+              <div class="phone">+852 3703-5860 / +852 65950118</div>
+              <div class="whatsapp">+852 65950118</div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+              <h5 class="footer-title">Matilda Medical Centre (Central)</h5>
+              <div>
+                Tuesday: 12:00 PM - 17:00 PM <br />
+                Thursday: 12:00 PM - 17:00 PM<br />
+                Saturday: 9:00 AM - 1:00 PM
               </div>
-              <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-                <h5 class="footer-title">Matilda International Hospital</h5>
-                <div>
-                  Tuesday: 12:00 PM - 17:00 PM <br />
-                  Thursday: 12:00 PM - 17:00 PM<br />
-                  Saturday: 9:00 AM - 1:00 PM
-                </div>
-                <div class="address">41 Mount Kellett Road, The Peak</div>
-                <div class="email">
-                  <a href="mailto:info@matilda.org">info@matilda.org</a>
+              <div class="address">
+                3/F, Prosperity Tower, 39 Queen's Road Central, Hong Kong
+              </div>
+              <!-- <div class="email">
+                <a href="mailto:mmc.central@matilda.org"
+                  >mmc.central@matilda.org</a
+                >
+              </div>
+              <div class="phone">+852 2537 8500</div> -->
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+              <h5 class="footer-title">Matilda International Hospital</h5>
+              <div>
+                Tuesday: 12:00 PM - 17:00 PM <br />
+                Thursday: 12:00 PM - 17:00 PM<br />
+                Saturday: 9:00 AM - 1:00 PM
+              </div>
+              <div class="address">41 Mount Kellett Road, The Peak</div>
+              <!-- <div class="email">
+                <a href="mailto:info@matilda.org">info@matilda.org</a>
                         </div>
                         <div class="phone">+852 2849 0111</div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
