--- a/dev/contact-zh.html
+++ b/dev/contact-zh.html
@@ -81,7 +81,7 @@
                 </ul>
             </div>
             <div class="language">
-                <a href="index.html">ENG</a>
+                <a href="contact.html">ENG</a>
             </div>
             <div class="contact-top-div">致電: +852 3703-5860 / +852 6595-0118</div>
         </div>
