--- a/dev/contact-zh.html
+++ b/dev/contact-zh.html
@@ -144,12 +144,12 @@
                 星期六: 9:00 AM - 1:00 PM
               </div>
               <div class="address">香港中環皇后大道中39號豐盛創建大廈3樓</div>
-              <div class="email">
+              <!-- <div class="email">
                 <a href="mailto:mmc.central@matilda.org"
                   >mmc.central@matilda.org</a
                 >
               </div>
-              <div class="phone">+852 2537 8500</div>
+              <div class="phone">+852 2537 8500</div> -->
             </div>
             <div
               class="col-12 col-xl-4 col-lg-4 col-md-4 col-sm-12 wow fadeInUp"
@@ -169,10 +169,10 @@
                 星期六: 9:00 AM - 1:00 PM
               </div>
               <div class="address">香港山頂加列山道41號</div>
-              <div class="email">
+              <!-- <div class="email">
                 <a href="mailto:info@matilda.org">info@matilda.org</a>
                         </div>
-                        <div class="phone">+852 2849 0111</div>
+                        <div class="phone">+852 2849 0111</div> -->
                     </div>
                 </div>
                 <hr />
