--- a/dev/devices-lunula-laser.html
+++ b/dev/devices-lunula-laser.html
@@ -62,7 +62,7 @@
                 </ul>
             </div>
             <div class="language">
-                <a href="index-zh.html">中文版</a>
+                <a href="devices-lunula-laser-zh.html">中文版</a>
             </div>
             <div class="contact-top-div">Call: +852 3703-5860 / +852 6595-0118</div>
         </div>
