--- a/dev/contact.html
+++ b/dev/contact.html
@@ -105,8 +105,11 @@
             You can schedule an appointment at your preferred time and location
             listed below.<br />
             We have a dedicated and caring approach and will seek to find you
-            the earliest appointment.
+            the earliest appointment. <br> <br>
+            If you would like to make an appointment, please call us at +852 3703-5860 or Whatsapp +852 6595-0118.
           </span>
+
+
                 <!-- <img src="img/calendar201707.png" class="wow fadeIn" />
                 <img src="img/calendar201708.png" class="wow fadeIn" /> -->
             </div>
