--- a/dev/contact-zh.html
+++ b/dev/contact-zh.html
@@ -97,6 +97,10 @@
                 <!-- <h3 class="title">可預約日期表</h3> -->
                 <span>
             請參考以下診所地址和診症時間預約，你亦可以聯絡我們盡早預約會面。
+            <br />
+            <br />
+            如果需要預約，請致電+852 3703-5860或Whatsapp +852
+            6595-0118聯繫我們。
           </span>
                 <!-- <img src="img/calendar201707.png" class="wow fadeIn"/>
 			<img src="img/calendar201708.png" class="wow fadeIn" /> -->
