--- a/devices-zh.html
+++ b/devices-zh.html
@@ -181,17 +181,16 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-                            <h4 class="service-subtitle title">What Are Plantar Warts?</h4>
+                            <!-- <h4 class="service-subtitle title">What Are Plantar Warts?</h4>
                             <div class="mt-3">
                                 Plantar warts or&nbsp;verruca are small growths that usually appear on the heels or other weight-bearing areas of your feet. This pressure may also cause plantar warts to grow inward beneath a hard, thick layer of skin (callus).
                             </div>
                             <div class="mt-3">
-                                <!-- <a href="https://nextstepmedic.com/contact-us-book-online" class="brown-round-btn">Book an
-                                    Appointment</a> -->
-                                <a href="https://nextstepmedic.com/contact-us-book-online" class="book-an-appointment-a-btn">
+                             
+                            <a href="https://nextstepmedic.com/contact-us-book-online" class="book-an-appointment-a-btn">
                     Book an Appointment
                   </a>
-                            </div>
+                        </div> -->
                         </div>
                     </div>
 
