--- a/devices-zh.html
+++ b/devices-zh.html
@@ -181,6 +181,14 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+                            <h4 class="service-subtitle title">
+                                什麼是「液態氮冷凍治療」？
+                            </h4>
+
+                            <div class="mt-3">
+                                液態氮冷凍療法利用攝氏零下196.56度的液態氮，到達皮膚表面約零下20-50度，透過急速冷凍與回溫數個循環，凍傷破壞病變的表皮細胞，造成病變的皮膚細胞壞死，陸續結痂而後一層層脫落，來達到治療效果。
+                            </div>
+
                             <!-- <h4 class="service-subtitle title">What Are Plantar Warts?</h4>
                             <div class="mt-3">
                                 Plantar warts or&nbsp;verruca are small growths that usually appear on the heels or other weight-bearing areas of your feet. This pressure may also cause plantar warts to grow inward beneath a hard, thick layer of skin (callus).
