--- a/devices-zh.html
+++ b/devices-zh.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 mb-lg-0 mb-md-3 mb-sm-3 mb-3">
-                    <img class="w-100" src="./img/device-img-8.jpg" alt="" />
+                    <!-- <img class="w-100" src="./img/device-img-8.jpg" alt="" /> -->
                 </div>
 
                 <div class="container">
