--- a/index.html
+++ b/index.html
@@ -180,8 +180,70 @@
             <div class="row">
                 <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="equipment-box">
-                        <h3>Lunula Laser Fungal Nail Treatment</h3>
+                        <h3>
+                            Shockwave Therapy
+                            <!-- Lunula Laser Fungal Nail Treatment -->
+                        </h3>
                         <a href="devices-lunula-laser.html"></a>
+                    </div>
+                    <div class="mb-5">
+                        Extracorporeal shock wave therapy (ESWT) is a noninvasive treatment that involves delivery of shock waves to injured soft tissue to reduce pain and promote healing.
+
+                        <!-- <b>The Erchonia Lunula laser device is a Low-Level Laser Light
+                that is specifically designed for treating onychomycosis –
+                toenail fungus</b
+              >
+              The Lunula produces two wavelengths, 635 nm and 405 nm, both of
+              which have been enriched by a proprietary rotating line-generated
+              laser beam. The 635 nm wavelength stimulates endogenous
+              mechanisms, which enhances the immunological function of resident
+              neutrophil and macrophage function to further degrade the
+              infectious agent. The 405 nm wavelength provides anti-microbial,
+              antibacterial and anti-fungal effects. -->
+                    </div>
+                </div>
+                <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="equipment-box">
+                        <h3>Ultrasound Treatment</h3>
+                        <a href="devices.html"></a>
+                    </div>
+
+                    <div class="mb-5">
+                        Ultrasound is a small electrical device used to send high frequency sound waves into your problem tissues. The sound waves penetrate the tissue and stimulate the cells involved in healing to reduce inflammation and promote tissue repair.
+                        <br /><br />Ultrasound treatment helps you to recover after acute injury, and may speed up recovery times. Ultrasound at a high dose is also helpful in the management of calcific tendinopathies to help break down and aid reabsorption
+                        of the calcium ions within the tendon.
+                    </div>
+                </div>
+                <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="equipment-box">
+                        <h3>Interferential Therapy (IFT)</h3>
+                        <a href="devices.html"></a>
+                    </div>
+                    <div class="mb-5">
+                        Electrodes are placed on your skin around the injured body part. The Interferential Current device then transmits electrical impulses in minute quantities through your skin. Underlying tissue and nerves are stimulated which begins the healing properties
+                        <br /><br /> Interferential current therapy has been used extensively to help manage pain, edema, and inflammation due to soft tissue irritation from trauma or degenerative changes, with less dependence on narcotics.
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="equipment-box equipment-box-2">
+                        <h3>Cryotherapy</h3>
+                        <a href="devices.html"></a>
+                    </div>
+                    <div class="mb-5">
+                        Cutaneous cryosurgery refers to localized application of freezing temperatures to achieve destruction of skin lesions. It can be used to treat a broad range of benign and premalignant skin conditions, and certain malignant skin conditions, with high cure
+                        rates.
+                    </div>
+                </div>
+
+                <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="equipment-box equipment-box-2">
+                        <h3>
+                            <!-- Shockwave Therapy -->
+                            Lunula Laser Fungal Nail Treatment
+                        </h3>
+                        <a href="devices.html"></a>
                     </div>
                     <div class="mb-5">
                         <b>The Erchonia Lunula laser device is a Low-Level Laser Light
@@ -195,68 +257,9 @@
               neutrophil and macrophage function to further degrade the
               infectious agent. The 405 nm wavelength provides anti-microbial,
               antibacterial and anti-fungal effects.
-            </div>
-          </div>
-          <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-            <div class="equipment-box">
-              <h3>Ultrasound Treatment</h3>
-              <a href="devices.html"></a>
-            </div>
-
-            <div class="mb-5">
-              Ultrasound is a small electrical device used to send high
-              frequency sound waves into your problem tissues. The sound waves
-              penetrate the tissue and stimulate the cells involved in healing
-              to reduce inflammation and promote tissue repair.
-              <br /><br />Ultrasound treatment helps you to recover after acute
-              injury, and may speed up recovery times. Ultrasound at a high dose
-              is also helpful in the management of calcific tendinopathies to
-              help break down and aid reabsorption of the calcium ions within
-              the tendon.
-            </div>
-          </div>
-          <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-            <div class="equipment-box">
-              <h3>Interferential Therapy (IFT)</h3>
-              <a href="devices.html"></a>
-            </div>
-            <div class="mb-5">
-              Electrodes are placed on your skin around the injured body part.
-              The Interferential Current device then transmits electrical
-              impulses in minute quantities through your skin. Underlying tissue
-              and nerves are stimulated which begins the healing properties
-              <br /><br />
-              Interferential current therapy has been used extensively to help
-              manage pain, edema, and inflammation due to soft tissue irritation
-              from trauma or degenerative changes, with less dependence on
-              narcotics.
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-            <div class="equipment-box equipment-box-2">
-              <h3>Cryotherapy</h3>
-              <a href="devices.html"></a>
-            </div>
-            <div class="mb-5">
-              Cutaneous cryosurgery refers to localized application of freezing
-              temperatures to achieve destruction of skin lesions. It can be
-              used to treat a broad range of benign and premalignant skin
-              conditions, and certain malignant skin conditions, with high cure
-              rates.
-            </div>
-          </div>
-
-          <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-            <div class="equipment-box equipment-box-2">
-              <h3>Shockwave Therapy</h3>
-              <a href="devices.html"></a>
-            </div>
-            <div class="mb-5">
-              Extracorporeal shock wave therapy (ESWT) is a noninvasive
+              <!-- Extracorporeal shock wave therapy (ESWT) is a noninvasive
               treatment that involves delivery of shock waves to injured soft
-              tissue to reduce pain and promote healing.
+              tissue to reduce pain and promote healing. -->
             </div>
           </div>
         </div>
